--- a/assets/style.css
+++ b/assets/style.css
@@ -153,25 +153,29 @@ header span{
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 90vh;
+    height: 100%;
     background-color: #010a26;
     position: fixed;
     left: -50%;
     transition: .5s ease-in;
     transition-delay: .1s;
     text-shadow: 0 0 5px #c3ffff;
-    padding-top: 30px;
+    /* padding-top: 30px; */
     opacity: 0;
+    padding: 40px 2%;
+    /* margin: 20px 0; */
     
     /* padding-bottom: 80px; */
 }
 
 .quiz .box{
     border: 2px solid #0554F2;
-    padding: 20px 3%;
+    padding: 5px 2%;
     opacity: 0;
     pointer-events: none;
     transform: scale(.9);
+    height: 90vh;
+    width: 80vh;
 }
 
 .quiz .box.active{
@@ -192,11 +196,14 @@ header span{
     text-align: center;
     background-color: black;
     border-radius: 7px;
+    height: 6vh;
 }
 
 .quiz .quiz-box{
     display: flex;
     flex-direction: column;
+    background-color: transparent;
+    width: 100%;
 }
  
 .quiz .quiz-footer{
@@ -243,7 +250,7 @@ header span{
     border: 2px solid #0554F2;
     font-size: 120%;
     padding: 2% 2%;
-    width: 350px;
+    width: auto;
     display: flex;
 }
 
@@ -255,27 +262,22 @@ header span{
     transition: .3s ease;
 }
 
-.box .option-list.answerUser{
+.box .option.answerUser{
     pointer-events: none;
 }
 
-.box .option-list.answerUser2{
+/* .box .option-list.answerUser2{
     pointer-events: auto;
-}
+} */
 
 .box .option-list p.correct{
     border: 2px solid greenyellow;
-    
-    /* pointer-events: none; */
+    color: greenyellow;
 }
 
-.box .option-list p.correct:hover{
-    border: 2px solid greenyellow;
-}
-
-.box .option-list p #wrong{
+.box .option-list p.wrong{
     border: 2px solid red;
-    /* pointer-events: none; */
+    color: red;
 }
 
 .box .option-list p:hover{
